--- a/druga.html
+++ b/druga.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 <title> Early life and education </title>
-<h1>Early life and education</h1>
-</head>
-<body>
-<img src="university.jpg"alt="University"
+<meta charset="utf-8">
 <ul>
 <li> <a href="index.html"> Mihajlo Idvorski Pupin</a> </li>
 <li> <a href="treća.html">Literary work</a> </li>
 <li> <a href="četvrta.html">Pupin Coils</a> </li>
 </ul>
 <hr>
+<h1>Early life and education</h1>
+</head>
+<body>
 <p> 
 Mihajlo Pupin was born on 9 October (27 September, OS) 1858 in the village of Idvor (in the modern-day municipality of Kovačica, Serbia) in Banat, in the Military Frontier in the Austrian Empire. He always remembered the words of his mother and cited her in his autobiography, From Immigrant to Inventor (1925):
 
@@ -26,5 +26,6 @@ Because of his activity in the “Serbian Youth” movement, which at that time 
 Had I brought five hundred dollars, instead of five cents, my immediate career in the new, and to me perfectly strange, land would have been the same.<br> 
 A young immigrant such as I was then does not begin his career until he has spent all the money which he has brought with him. I brought five cents, and immediately spent it upon a piece of prune pie, which turned out to be a bogus prune pie.<br>
  It contained nothing but pits of prunes. If I had brought five hundred dollars, it would have taken me a little longer to spend it, mostly upon bogus things, but the struggle which awaited me would have been the same in each case. It is no handicap to a boy immigrant to land here penniless; it is not a handicap to any boy to be penniless when he strikes out for an independent career, provided that he has the stamina to stand the hardships that may be in store for him.” </p>
+ <img src="university.jpg"alt="University"
  </body>
  </html>
