--- a/treća.html
+++ b/treća.html
@@ -2,15 +2,16 @@
 <html>
 <head>
 <title> Literary work</title>
-<h1>Literary work</h1>
-</head>
-<body>
+<meta charset="utf-8">
 <ul>
-<li> <a href="index.html">Mihajlo Idvorski Pupin</a  </li>
+<li> <a href="index.html">Mihajlo Idvorski Pupin</a>  </li>
 <li> <a href="druga.html"> Early life and education</a> </li>
 <li> <a href="četvrta.html">Pupin Coils</a> </li> 
 </ul>
 <hr>
+<h1>Literary work</h1>
+</head>
+<body>
 <p>Besides his patents he published several dozen scientific disputes, articles, reviews and a 396-page autobiography under the name Michael Pupin, From Immigrant to Inventor (Scribner's, 1923).<br>
  He won the annual Pulitzer Prize for Biography or Autobiography. <br>
  It was published in Serbian in 1929 under the title From pastures to scientist (Od pašnjaka do naučenjaka).</p>
