--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html>
 <head>
 <title>Mihajlo Idvorski Pupin</title>
-<h1><i><strong>Mihajlo Idvorski Pupin</strong></i></h1>
-</head>
-<body>
-<img src="pupin.jpg"alt="Mihajlo Idvorski Pupin"
+<meta charset="utf-8">
 <ul>
 <li> <a href="druga.html"> Early life and education</a> </li>
 <li> <a href="treća.html">Literary work</a> </li>
-<li> <a href="četvrta.html">Pupin Coils</a> </li> 
+<li> <a href="četvrta.html">Pupin Coils</a> </li>
+ <hr>
+ <h1><i><strong>Mihajlo Idvorski Pupin</strong></i></h1>
+ <img src="pupin.jpg"alt="Mihajlo Idvorski Pupin"
 </ul>
-<hr>
+</head>
+<body>
+
 
 <p> Mihajlo Idvorski Pupin, Ph.D., LL.D. (Serbian Cyrillic: Михајло Идворски Пупин; 9 October 1858 – 12 March 1935), also known as Michael I. Pupin, was a Serbian American physicist and physical chemist. 
 
