--- a/druga.html
+++ b/druga.html
@@ -26,6 +26,6 @@ Because of his activity in the “Serbian Youth” movement, which at that time 
 Had I brought five hundred dollars, instead of five cents, my immediate career in the new, and to me perfectly strange, land would have been the same.<br> 
 A young immigrant such as I was then does not begin his career until he has spent all the money which he has brought with him. I brought five cents, and immediately spent it upon a piece of prune pie, which turned out to be a bogus prune pie.<br>
  It contained nothing but pits of prunes. If I had brought five hundred dollars, it would have taken me a little longer to spend it, mostly upon bogus things, but the struggle which awaited me would have been the same in each case. It is no handicap to a boy immigrant to land here penniless; it is not a handicap to any boy to be penniless when he strikes out for an independent career, provided that he has the stamina to stand the hardships that may be in store for him.” </p>
- <img src="university.jpg"alt="University"
+ <img src="university.jpg"alt="University">
  </body>
  </html>
