--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <li> <a href="četvrta.html">Pupin Coils</a> </li>
  <hr>
  <h1><i><strong>Mihajlo Idvorski Pupin</strong></i></h1>
- <img src="pupin.jpg"alt="Mihajlo Idvorski Pupin"
+ <img src="pupin.jpg"alt="Mihajlo Idvorski Pupin">
 </ul>
 </head>
 <body>
